# mini-claude-code

./: .gitignore  .nexus.md  Dockerfile  PROJECT_UNDERSTANDING.md  README.md  nexus-agent-technical-design.md  nexus.toml  pyproject.toml
.nexus/memory/: feedback.md  project.md  reference.md
.nexus/sessions/: 20260418_165543.json  20260418_185934.json  20260418_193857.json  20260418_194943.json  20260418_202653.json
.nexus/skills/: code-review.md  deploy.md
docs/: MCP 集成机制.md  Skill 技能系统.md  skill系统设计方案.md  专题文档编写规范.md  主Agent与子Agent协作机制.md  今日改动-2026-04-18-v2.md  今日改动-2026-04-18-v3.md  工具系统全链路.md  提示词机制.md  改进技术报告.md  每日改动报告规范.md  状态流转机制.md  记忆系统策略.md  钩子系统.md
examples/: basic_chat.py
src/nexusagent/: __init__.py  __main__.py  config.py  main.py  models.py
src/nexusagent/agent/: checkpoint.py  master.py  orchestrator.py  state_machine.py  sub_agent.py  tool_tracker.py
src/nexusagent/context/: __init__.py  builder.py  compaction.py  manager.py  project_context.py  retriever.py  tokenizer.py
src/nexusagent/hooks/: __init__.py  engine.py  types.py
src/nexusagent/llm/: __init__.py  anthropic.py  base.py  openai_compat.py
src/nexusagent/memory/: __init__.py  frontmatter.py  index.py  memory.py  session.py
src/nexusagent/permission/: __init__.py  gate.py  (+1 more)
tests/: mock_llm.py  test_bash_tool.py  test_context.py  test_context_compaction.py  test_hooks.py  test_integration.py  test_memory_system.py  test_memory_write.py  test_permission.py  test_prompt_builder.py  test_session.py  test_skills.py  test_state_machine.py  test_sub_agent.py  test_tools.py
(+23 files in other folders)
