[project]
name = "nexusagent"
version = "0.1.0"
description = "A Claude Code-inspired AI coding agent"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
    "pydantic>=2.0",
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "tiktoken>=0.8.0",
]

[project.scripts]
nexus = "nexusagent.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
